# rust-game-dev-workshop

./: Cargo.toml  README.md
0-without-ecs/: Cargo.toml
0-without-ecs-solutions/: .gitignore  Cargo.toml
0-without-ecs/src/: goal.rs  main.rs  player.rs
1-with-ecs/: Cargo.toml  build.rs
1-with-ecs-solutions/: Cargo.toml
1-with-ecs-solutions/src/: direction.rs
1-with-ecs-solutions/src/systems/: keyboard.rs
1-with-ecs/src/: components.rs  main.rs  renderer.rs  resources.rs  systems.rs
1-with-ecs/src/systems/: ai.rs  animator.rs  keyboard.rs
src/: components.rs  direction.rs  enemy.rs  goal.rs  main.rs  player.rs  renderer.rs  resources.rs  systems.rs  world.rs
src/systems/: ai.rs  animator.rs  keyboard.rs  movement.rs  win_lose_checker.rs
