[package]
name = "minimal-game"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32", features = ["image"] }
specs = { version = "0.15", features = ["specs-derive"] }
rand = "0.7"
